# BCG

./: requirements.txt
bcg_website/: credentials.txt  setup.txt
bcg_website/autoparts/: urls.py  views.py
bcg_website/autoparts/carware_model/Carware_final2_grt_rtw/: CMakeLists.txt  Carware_final2.h  Carware_final2_data.c  Carware_final2_private.h  Carware_final2_types.h  rt_nonfinite.h  rtwtypes.h
bcg_website/autoparts/db/: autoparts_db_management.py  create_table_query.sql
bcg_website/autoparts/simulation_files/: nuovidati.c
bcg_website/autoparts/simulation_files/simulation_files_PaoloB/: nuovidati.c
bcg_website/autoparts/simulation_files/simulation_files_PaoloB/Carware_final2/carware_model/Carware_final2_grt_rtw/: Carware_final2.c  buildInfo.mat  builtin_typeid_types.h  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rtmodel.h
bcg_website/autoparts/templates/autoparts/: 00_introduction.html  01_description.html  02_suppliers.html  03_resilience.html  04_bia.html  05_threat.html  06_vulnerability.html  07_insurance.html  08_solutions.html  09_strategy.html  10_results.html  autoparts_base.html  autoparts_control.html  autoparts_menu.html  autoparts_navbar.html  autoparts_table.html  loading.html
bcg_website/autoparts/tmp_data/old/: Manuf30.slxc  Manuf30_M4.slx  Manuf30_M4.slxc  Manuf30_M5.slx  Manuf30_M5.slxc  Manuf30_M6.slx  Manuf30_M6.slxc  Manuf30_M7.slx  Manuf30_M7.slxc  Manuf30_M8.slx  Manuf30_M8.slxc  Manuf30_MX.slx  Manuf30_MX.slxc  PaoloB22-08-2023-11-13-36_matlab_vector.txt  PaoloB22-08-2023-11-18-00_input.mat  PaoloB22-08-2023-11-18-00_matlab_vector.txt  run.bat  simulation.m
bcg_website/autoparts/tmp_data/old/slprj/_jitprj/: s2utscJVgXjrIIuPfJNwXrB.l  s2utscJVgXjrIIuPfJNwXrB.mat  s4rvgk41k2hYiZ0n7lD1IZ.l  s4rvgk41k2hYiZ0n7lD1IZ.mat  s5GfaLHOY3IsAXEN493V9YC.l  s5GfaLHOY3IsAXEN493V9YC.mat  s7gsWAHYPOaihUwpt03cyWF.l  s7gsWAHYPOaihUwpt03cyWF.mat  sBvF6qOdSkfgFXEaCMkZ79B.l  sBvF6qOdSkfgFXEaCMkZ79B.mat  sCNDyFi9WsAzk5kQKfC9sBH.l  sCNDyFi9WsAzk5kQKfC9sBH.mat  sHZ5q9sBkCkC77z7g5DBypH.l  sHZ5q9sBkCkC77z7g5DBypH.mat  sJbmhP4jrs6SUTEA1kqpEBF.l  sJbmhP4jrs6SUTEA1kqpEBF.mat  sMp3cdVE1L345U3u2xwnY8B.l  sMp3cdVE1L345U3u2xwnY8B.mat  sTW8HEjXiLRGIi2Id0LY0QF.l  sTW8HEjXiLRGIi2Id0LY0QF.mat  sVbu0kOJpkq3gluwYARzojG.l  sVbu0kOJpkq3gluwYARzojG.mat  seW6rRezazAj7WCoYFhpdGB.l  seW6rRezazAj7WCoYFhpdGB.mat  sfO0nZ7oQgdioxSJFPezBMD.l  sfO0nZ7oQgdioxSJFPezBMD.mat  sfsfmO4SB1Ft29MxMt9ZE0G.l  sfsfmO4SB1Ft29MxMt9ZE0G.mat  sgaxzHB6WHW8cHD1ZKkyNo.l  sgaxzHB6WHW8cHD1ZKkyNo.mat  sqfB7Y7rQOLbCPaDanDdGeG.l  sqfB7Y7rQOLbCPaDanDdGeG.mat  swzbicewnHztEFTMSJjRkHE.l  swzbicewnHztEFTMSJjRkHE.mat
bcg_website/autoparts/tmp_data/old/slprj/_sfprj/EMLReport/: s2utscJVgXjrIIuPfJNwXrB.mat  s4rvgk41k2hYiZ0n7lD1IZ.mat  s5GfaLHOY3IsAXEN493V9YC.mat  s7gsWAHYPOaihUwpt03cyWF.mat  sBvF6qOdSkfgFXEaCMkZ79B.mat  sCNDyFi9WsAzk5kQKfC9sBH.mat  sHZ5q9sBkCkC77z7g5DBypH.mat  sJbmhP4jrs6SUTEA1kqpEBF.mat  sMp3cdVE1L345U3u2xwnY8B.mat  sTW8HEjXiLRGIi2Id0LY0QF.mat  sVbu0kOJpkq3gluwYARzojG.mat  seW6rRezazAj7WCoYFhpdGB.mat  sfO0nZ7oQgdioxSJFPezBMD.mat  sfsfmO4SB1Ft29MxMt9ZE0G.mat  sgaxzHB6WHW8cHD1ZKkyNo.mat  sqfB7Y7rQOLbCPaDanDdGeG.mat  swzbicewnHztEFTMSJjRkHE.mat
bcg_website/autoparts/tmp_data/old/slprj/_sfprj/Manuf30/: amsi_serial.mat
bcg_website/autoparts/tmp_data/old/slprj/_sfprj/precompile/: 5VeL5UsT8uTZDCeXuCOCVG.mat  ZVFWXYlyeCFMPniUo8F54D.mat  bCtqOWhxWSiUArMa2LrqFC.mat  fSQr2RKSAPOP800ttcqL1G.mat  i6FtA7BYMzZoA6ZXn91Oc.mat  l15AfRTXkDo7rBfwDyRXEF.mat  o6n0vJVA0Wyg6H235fufHH.mat  pP72L3SFZoM0VUn13nN3mH.mat  ra5uZeBlbtFve5zPb8pRqH.mat  vhFxQab5opOl2mJ2QDcIVG.mat
bcg_website/autoparts/tmp_data/old/slprj/sim/varcache/Manuf30/: checksumOfCache.mat  varInfo.mat
bcg_website/bcg_website/: asgi.py  settings.py  urls.py  wsgi.py
bcg_website/common/: urls.py  views.py
bcg_website/common/templates/common/: common_control.html  common_home.html  common_navbar.html  login.html
bcg_website/electricity/: urls.py  views.py
bcg_website/electricity/db/: carparts.db  create_table_query.sql  electricity.db  electricity_db_management.py
bcg_website/electricity/templates/electricity/: 00_introduction.html  01_description.html  02_suppliers.html  03_resilience.html  04_bia.html  05_threat.html  06_vulnerability.html  07_insurance.html  08_solutions.html  09_strategy.html  electricity_base.html  electricity_menu.html  electricity_navbar.html  electricity_table.html
(+20 files in other folders)
